manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: aristotle-app
  namespace: aristotle-app-staging
  labels:
    app: aristotle-app

spec:
  selector:
    matchLabels:
      app: aristotle-app
  template:
    metadata:
      labels:
        app: aristotle-app
    spec:
      containers:
        - name: aristotle-app
          image: "aristotleplatform.azurecr.io/aristotle-app"
          resources:
            requests:
<<<<<<< HEAD
<<<<<<< HEAD
              memory: "256Mi"
              cpu: "150m"
=======
              memory: "512Mi"
              cpu: "50m"
>>>>>>> 3b7bc6c... kubernetes
=======
              memory: "512Mi"
              cpu: "500m"
>>>>>>> c9595149a3cd63253c07140873614ece0d9f7761
            limits:
              memory: "1024Mi"
              cpu: "75m"
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
      securityContext:
        runAsNonRoot: true
        runAsUser: 3500
        runAsGroup: 3500
