manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aristotleeducationplatform-c749"
    labels:
        app: "aristotleeducationplatform-c749"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "aristotleeducationplatform-c749"
