manifests/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: aristotle-app
  namespace: aristotle-app-staging
spec:
  entryPoints:
    - http
  routes:
  - kind: Rule
    match: Host(`staging.aristotle.luscinia.ca`)
    priority: 100
    services:
    - name: aristotle-app
      port: 8080
    middlewares:
    - name: https-redirect
      namespace: default
    - name: security-headers
      namespace: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: aristotle-app-tls
  namespace: aristotle-app-staging
spec:
  entryPoints:
    - https
  routes:
  - kind: Rule
    match: Host(`staging.aristotle.luscinia.ca`)
    services:
    - name: aristotle-app
      port: 8080  
    middlewares:
    - name: security-headers
      namespace: default
  tls:
    secretName: aristotle-cert
